# MyCMakeFiles

./: .gitignore  CMakeLists.txt  ReadMe.md
A/: A.cpp  CMakeLists.txt
B/: CMakeLists.txt  Core.h
C/: C.cpp  CMakeLists.txt  fmt.bat
C/S/: CMakeLists.txt
Windows/: CMakeLists.txt
Windows/CMake/: C.cmake  CPP.cmake  Compiler.cmake  FindVS.cmake  GLFW.cmake  GLM.cmake  MSVC.cmake  OpenGL.cmake  Windows10Include.cmake  WindowsSystem.cmake
Windows/src/: App.cpp
